HTML and style edits to redesign action buttons
#9976 - As a developer, I will have implemented an interface feature to publish CCD documents to HIEOS

--- a/client/app/medicalDocuments/directives/medicalDocumentUpload.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUpload.html
@@ -1,4 +1,4 @@
-<div class="col-sm-6">
+<div class="col-sm-12 col-md-5">
     <form role="form" name="medicalDocumentUploadForm" enctype="multipart/form-data">
         <div class="panel panel-default">
             <div class="panel-heading">
