Apply low impact branding changes (MHC to C2S)
# 10192: As a developer, I will apply branding changes in the code to all items identified as low.

--- a/client/app/account/controllers/activationError.html
+++ b/client/app/account/controllers/activationError.html
@@ -8,7 +8,7 @@
                 <h1> Sorry! Activation Code Expired! </h1>
                 <div class="m-t-md">
                     <p><strong>We're very sorry. This email link is no longer valid.</strong> Please contact your provider for a new Verification Code.</p>
-                    <p class="m-t-md">Please click the link below for more information about MyHealthCompass available on the MHC Login Page.</p>
+                    <p class="m-t-md">Please click the link below for more information about Consent2Share available on the C2S Login Page.</p>
                 </div>
             </div>
         </div>
