--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="col-sm-7 col-xs-12 m-b-xs">
                             <button type="button" class="btn btn-success dark-green btn-xs m-r-xs"
-                                    ng-click="uploadedDocumentVm.downloadFile(medicalDocument)">
+                                    ng-click="uploadedDocumentVm.uploadDocumentToHIEOS(medicalDocument)">
                                 Publish
                             </button>
                             <button type="button" class="btn btn-default btn-outline btn-xs m-r-xs"
@@ -35,6 +35,9 @@
                                 <span class="fa fa-times m-r-xxs text-dark-red"></span> Remove
                             </a>
                         </div>
+                    </div>
+                    <div class="row row-striped p-t-xs p-b-xs"  ng-if="uploadedDocumentVm.medicaldocumentslist.length == 0">
+                        <strong> No document was has been uploaded.</strong>
                     </div>
                 </div>
             </div>
