Apply branding changes to directives
# 10192:As a developer, I will apply branding changes in the code to all items identified as low [4]

--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -27,7 +27,7 @@
                             <div class="col-md-7 skin-1">
                                 <div class="ibox-content img-circle">
                                     <div class="m-t-sm">
-                                        <mhc-oauth-login brand="loginVm.brandName"></mhc-oauth-login>
+                                        <c2s-oauth-login brand="loginVm.brandName"></c2s-oauth-login>
                                     </div>
                                     <div class="text-center">
                                         <a ng-click="loginVm.forgotPassword()"><small>Forget Password?</small></a>
