--- a/client/app/medicalDocuments/controllers/medicalDocument.html
+++ b/client/app/medicalDocuments/controllers/medicalDocument.html
@@ -1,6 +1,6 @@
 <pp-content-wrapper contenttitle="Upload Medical Documents">
     <div class="row">
-        <mhc-medical-documents-upload></mhc-medical-documents-upload>
-        <mhc-uploaded-documents medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList"></mhc-uploaded-documents>
+        <c2s-medical-documents-upload></c2s-medical-documents-upload>
+        <c2s-uploaded-documents medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList"></c2s-uploaded-documents>
     </div>
 </pp-content-wrapper>
