Apply branding changes to directives (mhcCreatePassword)
# 10192:As a developer, I will apply branding changes in the code to all items identified as low [4]

--- a/client/app/account/controllers/createPassword.html
+++ b/client/app/account/controllers/createPassword.html
@@ -14,7 +14,7 @@
                     </div>
                 </div>
             </div>
-            <mhc-create-password></mhc-create-password>
+            <c2s-create-password></c2s-create-password>
         </section>
     </div>
 </div>
