Apply branding changes to directives (mhcCategoryList)
# 10192:As a developer, I will apply branding changes in the code to all items identified as low [4]

--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -35,11 +35,11 @@
                             </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
                                 <div ng-if="sensitivityPolicy.federal">
-                                    <mhc-category-list
+                                    <c2s-category-list
                                             category-model="medicalInfoModalVm.consent.selectedSensitivityPolicies"
                                             category-obj="sensitivityPolicy"
                                             category-title="sensitivityPolicy.displayName"
-                                            category-content="sensitivityPolicy.description"></mhc-category-list>
+                                            category-content="sensitivityPolicy.description"></c2s-category-list>
                                 </div>
                             </div>
                         </div>
@@ -55,11 +55,11 @@
                             </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
                                 <div ng-if="!sensitivityPolicy.federal">
-                                    <mhc-category-list
+                                    <c2s-category-list
                                             category-model="medicalInfoModalVm.consent.selectedSensitivityPolicies"
                                             category-obj="sensitivityPolicy"
                                             category-title="sensitivityPolicy.displayName"
-                                            category-content="sensitivityPolicy.description"></mhc-category-list>
+                                            category-content="sensitivityPolicy.description"></c2s-category-list>
                                 </div>
                             </div>
                         </div>
