--- a/client/app/consent/directives/consentPurposeOfUseModal.html
+++ b/client/app/consent/directives/consentPurposeOfUseModal.html
@@ -16,11 +16,11 @@
             <div class="col-sm-6">
                 <div ng-repeat="purposeOfUse in purposeOfUseModalVm.data">
                     <div>
-                        <mhc-category-list
+                        <c2s-category-list
                                 category-model="purposeOfUseModalVm.consent.selectedPurposeOfUseCodes"
                                 category-obj="purposeOfUse"
                                 category-title="purposeOfUse.displayName"
-                                category-content="purposeOfUse.description"></mhc-category-list>
+                                category-content="purposeOfUse.description"></c2s-category-list>
                     </div>
                 </div>
             </div>
