Apply branding changes to directives (mhcPopover)
# 10192:As a developer, I will apply branding changes in the code to all items identified as low [4]

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -31,15 +31,15 @@
                                    placeholder="Password" ng-model="createPasswordVm.patient.password"
                                    mhc-validate-password required>
                                 <span class="text-strong-blue absolute hidden-xs" style="top: 4px; right: 0px;">
-                                    <mhc-popover popover-placement="right"
+                                    <c2s-popover popover-placement="right"
                                                  popover-title="createPasswordVm.popoverData.title"
-                                                 popover-content="createPasswordVm.popoverData"></mhc-popover>
+                                                 popover-content="createPasswordVm.popoverData"></c2s-popover>
                                 </span>
 
                                 <span class="text-strong-blue absolute visible-xs" style="top: 4px; right: 24px;">
-                                    <mhc-popover popover-placement="left"
+                                    <c2s-popover popover-placement="left"
                                                  popover-title="createPasswordVm.popoverData.title"
-                                                 popover-content="createPasswordVm.popoverData"></mhc-popover>
+                                                 popover-content="createPasswordVm.popoverData"></c2s-popover>
                                 </span>
                             <div class="text-alert m-t-xs" ng-if="createPasswordForm.password.$dirty"
                                  ng-messages="createPasswordForm.password.$error">
