--- a/client/app/consent/directives/categoryList.html
+++ b/client/app/consent/directives/categoryList.html
@@ -6,8 +6,8 @@
         <span class="m-l-xs" ng-bind="bindObj.displayName"></span>
     </label>
     <span class="text-navy-blue m-l-xs">
-        <mhc-popover popover-placement="bottom"
+        <c2s-popover popover-placement="bottom"
                      popover-title="bindTitle"
-                     popover-content="bindContent"></mhc-popover>
+                     popover-content="bindContent"></c2s-popover>
     </span>
 </div>
