--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -28,9 +28,9 @@
                                 <span class="fa fa-university m-r-xxs"></span>
                                 Federal Categories
                                 <span class="text-navy-blue m-l-xs">
-                                    <mhc-popover popover-placement="bottom"
+                                    <c2s-popover popover-placement="bottom"
                                                  popover-title="medicalInfoModalVm.federalInfo.title"
-                                                 popover-content="medicalInfoModalVm.federalInfo.description"></mhc-popover>
+                                                 popover-content="medicalInfoModalVm.federalInfo.description"></c2s-popover>
                                 </span>
                             </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
@@ -48,9 +48,9 @@
                                 <span class="fa fa-flag m-r-xs"></span>
                                 State Categories
                                 <span class="text-navy-blue m-l-xs">
-                                    <mhc-popover popover-placement="bottom"
+                                    <c2s-popover popover-placement="bottom"
                                                  popover-title="medicalInfoModalVm.stateInfo.title"
-                                                 popover-content="medicalInfoModalVm.stateInfo.description"></mhc-popover>
+                                                 popover-content="medicalInfoModalVm.stateInfo.description"></c2s-popover>
                                 </span>
                             </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
