Apply branding changes to directives (mhcPopoverClose)
# 10192:As a developer, I will apply branding changes in the code to all items identified as low [4]

--- a/client/app/account/controllers/createPassword.html
+++ b/client/app/account/controllers/createPassword.html
@@ -1,4 +1,4 @@
-<div id="wrapper" class="container-fluid page-bg-white" mhc-popover-close>
+<div id="wrapper" class="container-fluid page-bg-white" c2s-popover-close>
     <mhc-unsecure-top-navbar title="createPasswordVm.title"></mhc-unsecure-top-navbar>
 
     <div id="page-wrapper "class="padding-top-60 m-b-lg m-l-none m-r-none">
