--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -1,4 +1,4 @@
-<div class="inmodal" ng-form name="medicalInfofmationModalObj" mhc-popover-close>
+<div class="inmodal" ng-form name="medicalInfofmationModalObj" c2s-popover-close>
     <div class="modal-header">
         <h4 class="modal-title">Privacy Settings</h4>
     </div>
