Apply branding changes to directives (mhc-unsecure-top-navbar)
# 10192:As a developer, I will apply branding changes in the code to all items identified as low [4]

--- a/client/app/account/controllers/forgotPassword.html
+++ b/client/app/account/controllers/forgotPassword.html
@@ -4,7 +4,7 @@
         <div ng-message="email">The email address you have provided must be valid, please try again.</div>
     </script>
 
-    <mhc-unsecure-top-navbar title="forgotPasswordVm.title"></mhc-unsecure-top-navbar>
+    <c2s-unsecure-top-navbar title="forgotPasswordVm.title"></c2s-unsecure-top-navbar>
 
     <div id="page-wrapper " class="padding-top-60 m-b-lg m-l-none m-r-none">
         <section>
