--- a/client/app/account/controllers/resetPasswordSuccess.html
+++ b/client/app/account/controllers/resetPasswordSuccess.html
@@ -1,5 +1,5 @@
 <div id="wrapper" class="container-fluid page-bg-white">
-    <mhc-unsecure-top-navbar title="resetPasswordVm.title"></mhc-unsecure-top-navbar>
+    <c2s-unsecure-top-navbar title="resetPasswordVm.title"></c2s-unsecure-top-navbar>
     <div id="page-wrapper " class="padding-top-60 m-b-lg m-l-none m-r-none">
 
         <div class="row">
