--- a/client/app/account/controllers/createPassword.html
+++ b/client/app/account/controllers/createPassword.html
@@ -1,5 +1,5 @@
 <div id="wrapper" class="container-fluid page-bg-white" c2s-popover-close>
-    <mhc-unsecure-top-navbar title="createPasswordVm.title"></mhc-unsecure-top-navbar>
+    <c2s-unsecure-top-navbar title="createPasswordVm.title"></c2s-unsecure-top-navbar>
 
     <div id="page-wrapper "class="padding-top-60 m-b-lg m-l-none m-r-none">
         <section>
