--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -15,7 +15,7 @@
                             <mhc-multi-select-date id="birthdate" name="birthdate"
                                                    year-order="desc" start-year="" end-year=""
                                                    ng-model="verificationVm.verifyInfo.birthdate"
-                                                   mhc-check-after-today required
+                                                   c2s-check-after-today required
                                                    mhc-outside-click="verificationVm.checkDateField(verificationForm.birthdate)">
                             </mhc-multi-select-date>
                             <div class="text-alert" ng-if="verificationForm.birthdate.$dirty"
