--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -54,7 +54,7 @@
                         <div class="col-sm-6 col-md-5 col-lg-4">
                             <input id="reenterPassword" type="password" class="form-control" name="confirmPassword"
                                    placeholder="Confirm password" ng-model="createPasswordVm.patient.confirmPassword"
-                                   mhc-compare-to="createPasswordVm.patient.password" required>
+                                   c2s-compare-to="createPasswordVm.patient.password" required>
                             <div class="text-alert m-t-xs" ng-if="createPasswordForm.confirmPassword.$dirty"
                                  ng-messages="createPasswordForm.confirmPassword.$error">
                                 <div ng-messages-include="activation-messages"></div>
