--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -16,7 +16,7 @@
                                                    year-order="desc" start-year="" end-year=""
                                                    ng-model="verificationVm.verifyInfo.birthdate"
                                                    c2s-check-after-today required
-                                                   mhc-outside-click="verificationVm.checkDateField(verificationForm.birthdate)">
+                                                   c2s-outside-click="verificationVm.checkDateField(verificationForm.birthdate)">
                             </mhc-multi-select-date>
                             <div class="text-alert" ng-if="verificationForm.birthdate.$dirty"
                                  ng-messages="verificationForm.birthdate.$error">
