--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -12,12 +12,12 @@
                     <label for="birthdate">Date of Birth</label>
                     <div class="row">
                         <div class="col-xs-12">
-                            <mhc-multi-select-date id="birthdate" name="birthdate"
+                            <c2s-multi-select-date id="birthdate" name="birthdate"
                                                    year-order="desc" start-year="" end-year=""
                                                    ng-model="verificationVm.verifyInfo.birthdate"
                                                    c2s-check-after-today required
                                                    c2s-outside-click="verificationVm.checkDateField(verificationForm.birthdate)">
-                            </mhc-multi-select-date>
+                            </c2s-multi-select-date>
                             <div class="text-alert" ng-if="verificationForm.birthdate.$dirty"
                                  ng-messages="verificationForm.birthdate.$error">
                                 <span ng-messages-include="verification-messages"></span>
