Apply branding changes to directives (mhc-validate-password)
# 10192:As a developer, I will apply branding changes in the code to all items identified as low [4]

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -29,7 +29,7 @@
                         <div class="col-sm-6 col-md-5 col-lg-4">
                             <input id="password" type="password" class="form-control relative" name="password"
                                    placeholder="Password" ng-model="createPasswordVm.patient.password"
-                                   mhc-validate-password required>
+                                   c2s-validate-password required>
                                 <span class="text-strong-blue absolute hidden-xs" style="top: 4px; right: 0px;">
                                     <c2s-popover popover-placement="right"
                                                  popover-title="createPasswordVm.popoverData.title"
