Rename function to publish to the HIE.
#9976 - As a developer, I will have implemented an interface feature to publish CCD documents to HIEOS

--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -36,7 +36,7 @@
                                 <div class="col-sm-12">
 
                                     <button type="button" class="btn btn-success dark-green btn-xs m-r-xs"
-                                            ng-click="uploadedDocumentVm.uploadDocumentToHIEOS(medicalDocument)">
+                                            ng-click="uploadedDocumentVm.uploadDocumentToHIE(medicalDocument)">
                                         <span class="fa fa-upload m-r-xs"></span>Publish
                                     </button>
                                     <button type="button" class="btn btn-default btn-xs m-r-sm"
