Change text from "Forget" to "Forgot"
# 10540:C2S V2:Change hyperlink text to "Forgot Password" in Admin and PP UI

--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -30,7 +30,7 @@
                                         <c2s-oauth-login brand="loginVm.brandName"></c2s-oauth-login>
                                     </div>
                                     <div class="text-center">
-                                        <a ng-click="loginVm.forgotPassword()"><small>Forget Password?</small></a>
+                                        <a ng-click="loginVm.forgotPassword()"><small>Forgot Password?</small></a>
                                         <p> Version: {{::loginVm.version}} </p>
                                     </div>
                                 </div>
