--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="row row-striped p-t-xs p-b-xs"
                          ng-if="uploadedDocumentVm.medicaldocumentslist.length == 0">
-                        <strong> No document was has been uploaded.</strong>
+                        <strong> No document has been uploaded.</strong>
                     </div>
                 </div>
             </div>
