Make edits to HTML to make Bootlint compliant. In progress.
#10469: As a developer, I will verify proper usage of bootstrap on all pages in all states and fix errors.

--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -50,7 +50,7 @@
                         <span ng-bind="loginVm.brandName"></span> is a secure online website that gives you convenient 24-hour access to your personal health record from anywhere using an internet connection. It can help you to become more informed about your health care and thus to be more involved in your health care.
                     </p>
                     <span>
-                        <a href="#aboutHIEPortal" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('aboutHIEPortal')">Read More</a>
+                        <a href="#aboutHIEPortal" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('aboutHIEPortal')">Learn more about this topic.</a>
                     </span>
                 </div>
                 <div class="col-md-4 padding-bottom-15">
@@ -62,7 +62,7 @@
                     </p>
 
                     <span >
-                        <a href="#patientPortalHelpMe" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('patientPortalHelpMe')">Read More</a>
+                        <a href="#patientPortalHelpMe" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('patientPortalHelpMe')">Read more about this topic.</a>
                     </span>
 
                 </div>
@@ -74,8 +74,7 @@
                         Yes. Your <span ng-bind="loginVm.brandName"></span> account has many privacy and security safeguards designed to protect your health information. Even though your health information is online, it is private and only accessible by authorized people, such as your health care providers.
                     </p>
                     <span >
-                        <a href="#informationPrivacySecure" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('informationPrivacySecure')">Read More</a>
-
+                        <a href="#informationPrivacySecure" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('informationPrivacySecure')">Learn about this topic.</a>
                     </span>
                 </div>
             </div>
